src/johan_production/objects/Smart_Fridge_Reading__e.object
<CustomObject>
    <fields>
        <fullName>deviceId__c</fullName>
        <label>deviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>door__c</fullName>
        <label>door</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity__c</fullName>
        <label>humidity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>temperature__c</fullName>
        <label>temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <type>DateTime</type>
    </fields>
    <label>Smart Fridge Reading</label>
    <pluralLabel>Smart Fridge Readings</pluralLabel>
</CustomObject>